# rhodes_resonance

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  environment.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.serena/: project.yml
.serena/memories/: finish_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
configs/: arts.json  characters.json  feature_flags.json  model.json  narration_env.json  narration_policy.json  prompts.json  prompts.json.example  relation_rules.json  story.json  time_rules.json  weapons.json
docs/: coc_terra.md  plot.story.json  spec.md
logs/: run_events.jsonl
logs/prompts/: Amiya_prompt.txt  Doctor_prompt.txt  Faust_prompt.txt  Mephisto_prompt.txt
scripts/: remove_participants_field.py
src/: main.py
src/actions/: npc.py
src/agents/: factory.py  kp.py  narrator.py  npc.py  player.py
src/eventlog/: __init__.py  bus.py  cli.py  context.py  events.py  story_logger.py  structured_logger.py
src/npc_talk/: app.py  cli.py  config.py
src/npc_talk/agents/: factory.py  narrator.py  npc.py
src/npc_talk/logging/: __init__.py  bus.py  cli.py  context.py  events.py  story_logger.py  structured_logger.py
src/npc_talk/world/: tools.py
src/runtime/: engine.py
src/settings/: loader.py
src/world/: tools.py
tests/: conftest.py  test_guard.py  test_logging_pipeline.py  test_weapons.py  test_world_tools.py
tests/_stubs/agentscope/: __init__.py  message.py  tool.py
web/: app.js  config.js  index.html  style.css
